--- a/catalog/templates/deleteItem.html
+++ b/catalog/templates/deleteItem.html
@@ -3,29 +3,35 @@
 
 {% block content %}
 
-  <div class="row">
-    <div class="row">
-      <div class="medium-6 columns">
-        <h1>Delete {{ item_name.name }}</h1>
-      </div>
-    </div>
-
-    <div class="row">
-    <div class="medium-6 columns">
-    <form action="#" method="post">
+  <div class="site-container">
+    <div class="site-content">
       <div class="row">
-        <div class="medium-6 columns">
-          <div class="button-group">
-            <input type="submit" class="button alert" value="Delete" id="submit">
-            <a href="{{ url_for('category_index', category_name=category_name)
-                    }}"
-               class="button
+        <div class="row">
+          <div class="medium-6 columns">
+            <h1>Delete {{ item_name.name }}</h1>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="medium-6 columns">
+            <form action="#" method="post">
+              <div class="row">
+                <div class="medium-6 columns">
+                  <div class="button-group">
+                    <input type="submit"
+                           class="button alert"
+                           value="Delete"
+                           id="submit">
+                    <a href="{{ url_for('category_index', category_name=category_name) }}"
+                       class="button
             secondary">Cancel</a>
+                  </div>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
-    </form>
-  </div>
     </div>
   </div>
 
