--- a/catalog/templates/editCategory.html
+++ b/catalog/templates/editCategory.html
@@ -2,37 +2,42 @@
 {% block title %}Edit Category{% endblock %}
 
 {% block content %}
-  <div class="row">
-    <div class="medium-6 columns">
-      <h1>Edit Category</h1>
+
+  <div class="site-container">
+    <div class="site-content">
+      <div class="row">
+        <div class="medium-6 columns">
+          <h1>Edit Category</h1>
+        </div>
+      </div>
+
+      <form action="#" method="post">
+        <div class="row">
+          <div class="medium-6 columns">
+            <label for="name">Name:
+              <input type="text" value="{{ category.name }}"
+                     name="category_name">
+            </label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="medium-6 columns">
+            <input type="submit" class="button" value="Submit" id="submit">
+          </div>
+        </div>
+
+
+        <div class="row">
+          <div class="medium-6 columns">
+            <a href="{{ url_for('delete_category', category_id=category.id) }}"
+               class="button
+          alert">Delete Category?</a>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
-
-  <form action="#" method="post">
-    <div class="row">
-      <div class="medium-6 columns">
-        <label for="name">Name:
-          <input type="text" value="{{ category.name }}"
-                 name="category_name">
-        </label>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="medium-6 columns">
-          <input type="submit" class="button" value="Submit" id="submit">
-      </div>
-    </div>
-
-
-    <div class="row">
-      <div class="medium-6 columns">
-        <a href="{{ url_for('delete_category', category_id=category.id) }}"
-           class="button
-          alert">Delete Category?</a>
-      </div>
-    </div>
-  </form>
 
 {% endblock %}
 
