--- a/catalog/templates/login.html
+++ b/catalog/templates/login.html
@@ -4,7 +4,8 @@
 {% block content %}
 
 
-  <div class="callout large">
+  <div class="site-container login-container">
+    <div class="site-content login-content">
     <h3>Login Options:</h3>
     <!-- GOOGLE PLUS SIGN IN-->
     <div id="signInButton">
@@ -50,7 +51,7 @@
     </script>
     <!--END GOOGLE PLUS SIGN IN -->
   </div>
-
+  </div>
 
 {% endblock %}
 
