--- a/catalog/templates/itemDescription.html
+++ b/catalog/templates/itemDescription.html
@@ -2,30 +2,33 @@
 {% block title %}Add New Item{% endblock %}
 
 {% block content %}
-  <div class="row">
-    <div class="medium-8 columns">
-      <h1>{{ item.name }}</h1>
-    </div>
-  </div>
 
+  <div class="site-container">
+    <div class="site-content">
+      <div class="row">
+        <div class="medium-8 columns">
+          <h1>{{ item.name }}</h1>
+        </div>
+      </div>
+    
+      <div class="row">
+        <div class="medium-8 columns">
+          <p>{{ item.description }}</p>
 
-  <div class="row">
-    <div class="medium-8 columns">
-      <p>{{ item.description }}</p>
+        </div>
+      </div>
 
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="medium-6 columns">
-      {% if item.user.name == user_name %}
-        <a href="{{ url_for('edit_item', item_name = item.name,
+      <div class="row">
+        <div class="medium-6 columns">
+          {% if item.user.name == user_name %}
+            <a href="{{ url_for('edit_item', item_name = item.name,
         category_name=category.name) }}"
-           class="button secondary">Edit/Delete Item</a>
-        </div>
-        </div>
-      {% endif %}
-
+               class="button secondary">Edit/Delete Item</a>
+            </div>
+            </div>
+          {% endif %}
+    </div>
+  </div>
 
 
 
